--- a/one-product.html
+++ b/one-product.html
@@ -321,7 +321,7 @@
     <script src="assets/js/libs/jquery-3.6.3.min.js"></script>
     <script src="assets/js/libs/bootstrap.min.js"></script>
     <script src="assets/js/libs/popper.js"></script>
-    <script src="../assets/js/libs/zoom-image.js"></script>
+    <script src="assets/js/libs/zoom-image.js"></script>
     <script src="main.js"></script>
 
     <script>
