--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                         تجاعيد
                                         الوجه.
                                         وتُستخدَم أيضًا لعلاج تشنجات الرقبة والتعرق</p>
-                                    <div class="header-content-actions">
+                                    <!-- <div class="header-content-actions">
                                         <a class="nav-link signup" href="#">
                                             استكشف المنتج
                                             <div class="svg-parent">
@@ -73,7 +73,7 @@
                                                 </svg>
                                             </div>
                                         </a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
 
@@ -158,25 +158,6 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
-                            <div class="product-card">
-                                <img src="assets/images/product.png" alt="">
-                                <h3>إسم المنتج كاملا فيما لايزيد عن سطرين</h3>
-                                <p>يمنع العضلات من الحركة لفترة محدودة. وتُستخدَم هذه الحقن غالبًا لتخفيف مظهر تجاعيد
-                                    الوجه. </p>
-                                <h5>550.50$</h5>
-                                <a class="nav-link signup" href="#">
-                                    تفاصيل المنتج
-                                    <div class="svg-parent">
-                                        <svg width="28" height="26" viewBox="0 0 28 26" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M22.1947 11.4396L27.3055 3.63904C28.3963 1.97412 26.6503 -0.0887541 24.828 0.711942L2.02905 10.7297C0.456888 11.4205 0.429007 13.6409 1.98333 14.371L24.9539 25.1602C26.7508 26.0042 28.5468 23.9974 27.5094 22.3048L22.1624 13.5808C21.758 12.921 21.7706 12.087 22.1947 11.4396Z" />
-                                        </svg>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
